
Don't worry about deadlines



7/26/18
	- Removed uncommon primitive types.
	- No longer extending .net TypeConverter. Kept it simple, and only implemented pre-existing ITypeConverter. 
		- Changes in progress, perhaps using a generic for return type of ITypeConverter. If too messy, will make it an object. 

7/31/18
	- Removed extra entry from dictionary
	- ITypeConverter only defines "ConvertFromString"
		- Should ITypeConverter return a generic, or an object? 
		- Can't mix generics in a collection, so would need to introduce a new base interface and use this instead.
			- At that point, how much benefit is there to using a generic? 
			- Played around with some different options. Used <object> as the type, too messy. 
				- using the empty base interface works well for keeping all the other interfaces and method signatures clean, but when using "ConvertFromString" it becomes problematic
				- If it was an abstract class, might be easier than a base interface

8/1/18
	- Thought through implications of using a generic for ITypeConverter
		- Could make things compile pretty cleanly with a base interface without the generic.
			- Gets messy with having a collection of mixed types. 
			- Could cast to ITypeConverter<object> or ITypeConverter<dynamic>, but that feels so wrong
			- Also, while it compiles, it would fail at runtime.
				- {"Unable to cast object of type 'FlatFile.FixedWidth.Implementation.TypeConverters.IntTypeConverter' to type 'FlatFile.FixedWidth.Interfaces.ITypeConverter`1[System.Object]'."}
	- The main place we use the type converter, we already know the expected return type (through field.PropertyInfo.PropertyType). Not a huge advantage, and makes things messy. 
		- besides, modelProperty.SetValue expects and object for the converted value. Anything more specific is unnecessary.
	- Removed byte and sbyte from unit tests