@@ -1,4 +1,4 @@
-0         string1   true      42             
-1         string2   false     36             
-2         string3   1         123.45678910   
-3         ABCDEFG   TRUE      100,000        
+0    string1   true   42                       
+1    string2   false  1.36E-100                
+2    string3   1      123.45678910             
+3    ABCDEFG   TRUE   100,000,000,000,000,000  
